# RISCV-DLR

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md
dataset/imagenet_quant_224_tflite/: preprocess_img.py
example/pre_quant_mobilenet_v1_tflite/: Makefile  TODO  build_module.py  host.cc  host.cpp  kernel.inc
include/: CMakeLists.txt  dlr.h
include/tvm/runtime/: c_backend_api.h  c_runtime_api.h  device_api.h  module.h  ndarray.h  node_base.h  packed_func.h  registry.h  serializer.h  threading_backend.h  util.h
src/: CMakeLists.txt  dlr.cc  dump-kernel.cc
src/contrib/sort/: sort.cc
src/runtime/: c_runtime_api.cc  cpu_device_api.cc  file_util.cc  file_util.h  meta_data.h  module.cc  module_util.cc  module_util.h  ndarray.cc  pack_args.h  registry.cc  runtime_base.h  system_lib_module.cc  thread_pool.cc  threading_backend.cc  workspace_pool.cc  workspace_pool.h
src/runtime/graph/: graph_runtime.cc  graph_runtime.h
